--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Ironhack Cart</title>
   </head>
   <body>
-    <h1>Ironhack Cart</h1>
+    <h1>Cart</h1>
     <table id="cart">
       <thead>
         <tr>
@@ -21,7 +21,7 @@
       <tbody>
         <tr class="product">
           <td class="name">
-            <span>Ironhack Rubber Duck</span>
+            <span>Rubber Duck</span>
           </td>
           <td class="price">$<span>25.00</span></td>
           <td class="quantity">
@@ -35,7 +35,7 @@
         <!-- Iteration 2: Add more products here -->
         <tr class="product">
           <td class="name">
-            <span>Ironhack Rubber Duck</span>
+            <span>Rubber Duck</span>
           </td>
           <td class="price">€<span>25.00</span></td>
           <td class="quantity">
